<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_homepage">Home</string>
    <string name="action_social_notifications">Notifications</string>
    <string name="action_profile">Profile</string>

    <color name="appBackground">#EBE7E4</color>
    <color name="textColor">#FF8000</color>

    <string name="signin">Sign in</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="emailregister">Sign Up</string>
    <string name="login">Log In</string>
    <string name="facebookregister">Register with Facebook</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="name">Nariman Hesham</string>
    <string name="myemail">nariman.hesham93@gmail.com</string>
    <string name="birthdate">Birth Date:</string>
    <string name="mybirthdate">1/9/1993</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>

    <color name="greyText">#4F4F4F</color>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_restaurants_and_cafes">Restaurants &amp; Cafes</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="notifications">Notifications:</string>
    <string name="action_logout">Logout</string>
    <string name="facebook_app_id">592528824214377</string>
    <string name="title_facebook_login">com.facebook.LoginActivity</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="username">Username:</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="submit">Submit</string>
    <string name="title_activity_news_feed">NewsFeedActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="title_activity_subcategory">SubcategoryActivity</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="title_activity_likers">LikersActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile_settings">Profile Settings</string>
    <string name="title_activity_account_settings">Account</string>
    <color name="greyBackground">#212121</color>
    <string name="editProfile">Edit Profile:</string>
    <string name="save">Save</string>
    <string name="changepassword">Change Password:</string>
    <string name="oldpassword">Old Password:</string>
    <string name="newpassword">New Password:</string>
    <string name="editaccount">Edit Account:</string>
    <string name="allownotifications">Allow Notificaions:</string>
    <string name="notificationsound">Notification Sound:</string>
    <string name="privacy">Privacy:</string>

</resources>
