<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="always"
          android:layout_width="wrap_content"/>
    
    <item android:id="@+id/action_profile"
          android:icon="@drawable/ic_action_profile"
          android:title="@string/action_profile"
          android:showAsAction="always"
          android:layout_width="wrap_content"/>    
    
    <item android:id="@+id/action_homepage"
          android:icon="@drawable/ic_action_homepage"
          android:title="@string/action_homepage"
          android:showAsAction="always" 
          android:layout_width="wrap_content"/>
        
    <item android:id="@+id/action_social_notifications"
          android:icon="@drawable/ic_action_social_notifications"
          android:title="@string/action_social_notifications"
          android:showAsAction="always" 
          android:layout_width="wrap_content"/>        
        
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/action_settings"
          android:showAsAction="always" 
          android:layout_width="wrap_content"/>

    <item android:id="@+id/action_logout"
          android:icon="@drawable/ic_action_logout"
          android:title="@string/action_logout"
          android:showAsAction="never" 
          android:layout_width="wrap_content"/>    

</menu>
