<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:src="@raw/minnie" />

    <TextView
        android:id="@+id/inputmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputUsername"
        android:layout_below="@+id/inputUsername"
        android:layout_marginTop="17dp"
        android:text="@string/email"
        android:textColor="@color/greyText"
        android:textSize="15dp"
        android:textStyle="normal"
        android:typeface="serif" />

    <TextView
        android:id="@+id/inputUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/mybirthdate"
        android:textColor="@color/textColor"
        android:textSize="14dp"
        android:textStyle="normal"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/female"
        android:textColor="@color/textColor"
        android:textSize="14dp"
        android:textStyle="normal"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputmail"
        android:layout_below="@+id/inputmail"
        android:text="@string/myemail"
        android:textColor="@color/textColor"
        android:textSize="14dp"
        android:textStyle="normal"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/imageView1"
        android:text="@string/birthdate"
        android:textColor="@color/greyText"
        android:textSize="15dp"
        android:textStyle="normal"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/gender"
        android:textColor="@color/greyText"
        android:textSize="15dp"
        android:textStyle="normal"
        android:typeface="serif" />
    
    

</RelativeLayout>