<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:background="@color/appBackground">

   	<Button
   	    android:id="@+id/button3"
   	    android:layout_width="280dp"
   	    android:layout_height="wrap_content"
   	    android:layout_alignLeft="@+id/button2"
   	    android:layout_below="@+id/button2"
   	    android:layout_marginTop="28dp"
   	    android:text="@string/login"
   	    android:textColor="@color/textColor"
   	    android:textSize="20dp"
   	    android:textStyle="normal"
   	    android:typeface="serif" 
   	    android:onClick="goToLoginPage"/>

   	<Button
   	    android:id="@+id/button2"
   	    android:layout_width="280dp"
   	    android:layout_height="wrap_content"
   	    android:layout_alignLeft="@+id/button1"
   	    android:layout_below="@+id/button1"
   	    android:layout_marginTop="31dp"
   	    android:text="@string/emailregister"
   	    android:textColor="@color/textColor"
   	    android:textSize="20dp"
   	    android:textStyle="normal"
   	    android:typeface="serif" />

   	<Button
   	    android:id="@+id/button1"
   	    android:layout_width="280dp"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/imageView1"
   	    android:layout_centerHorizontal="true"
   	    android:layout_marginTop="62dp"
   	    android:text="@string/facebookregister"
   	    android:textColor="@color/textColor"
   	    android:textSize="20dp"
   	    android:textStyle="normal"
   	    android:typeface="serif" />

   	<ImageView
   	    android:id="@+id/imageView1"
   	    android:layout_width="400dp"
   	    android:layout_height="130dp"
   	    android:layout_alignParentLeft="true"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginTop="19dp"
   	    android:scaleType="centerCrop"
   	    android:src="@raw/raseenee" />
    
</RelativeLayout>
