<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${LinearPackage}.${activityClass}"
    android:background="@color/appBackground" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="940dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/editProfile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/greyText"
                android:textSize="20sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:text="@string/firstname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText1"
                android:layout_below="@+id/editText1"
                android:layout_marginTop="14dp"
                android:text="@string/lastname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText2"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="14dp"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:ems="10" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText3"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="16dp"
                android:text="@string/birthdate"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText4"
                android:layout_below="@+id/editText4"
                android:layout_marginTop="14dp"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:ems="10" />
            
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText5"
                android:layout_below="@+id/editText5"
                android:layout_marginTop="14dp"
                android:text="@string/country"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_below="@+id/textView7"
                android:ems="10" />
            
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText6"
                android:layout_below="@+id/editText6"
                android:layout_marginTop="14dp"
                android:text="@string/city"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView8"
                android:layout_below="@+id/textView8"
                android:ems="10" />
            
        <Button
            android:id="@+id/button1"
       	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:layout_below="@+id/editText7"
        	android:onClick="goToProfile"
        	android:text="@string/save"
        	android:textColor="@color/textColor"
        	android:textSize="15sp"
        	android:textStyle="normal"
        	android:typeface="serif" />           
            
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText7"
                android:layout_below="@+id/button1"
                android:layout_marginTop="14dp"
                android:text="@string/changepassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/greyText"
                android:textSize="20sp"
                android:textStyle="normal"
                android:typeface="serif" />
                
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView9"
                android:layout_below="@+id/textView9"
                android:layout_marginTop="14dp"
                android:text="@string/oldpassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" /> 
                
            <EditText
                android:id="@+id/editText8"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView10"
                android:layout_below="@+id/textView10"
                android:ems="10"
                android:inputType="textPassword" /> 
                           
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText8"
                android:layout_below="@+id/editText8"
                android:layout_marginTop="14dp"
                android:text="@string/newpassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" /> 
                
            <EditText
                android:id="@+id/editText9"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView11"
                android:layout_below="@+id/textView11"
                android:ems="10"
                android:inputType="textPassword" />
            
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText9"
                android:layout_below="@+id/editText9"
                android:layout_marginTop="14dp"
                android:text="@string/confirmpassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="serif" /> 
                
            <EditText
                android:id="@+id/editText10"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView12"
                android:layout_below="@+id/textView12"
                android:ems="10"
                android:inputType="textPassword" /> 
                
        <Button
            android:id="@+id/button2"
       	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:layout_below="@+id/editText10"
        	android:onClick="goToLogin"
        	android:text="@string/save"
        	android:textColor="@color/textColor"
        	android:textSize="15sp"
        	android:textStyle="normal"
        	android:typeface="serif" />             
            
        </RelativeLayout>
    </ScrollView>

</LinearLayout>