<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="400dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:src="@raw/raseenee" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginLeft="14dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/inputUsername"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView1"
           android:layout_below="@+id/textView1"
           android:ems="10"
           android:inputType="textPersonName" >
        
        </EditText>
       
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputUsername"
            android:layout_marginLeft="14dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/inputMail"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView2"
           android:layout_below="@+id/textView2"
           android:ems="10"
           android:inputType="textWebEmailAddress" >
        
        </EditText> 
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputMail"
            android:layout_marginLeft="14dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/inputPassword"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView3"
           android:layout_below="@+id/textView3"
           android:ems="10"
           android:inputType="textPassword" >
        
        </EditText>
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputPassword"
            android:layout_marginLeft="14dp"
            android:text="@string/confirmpassword"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/inputConfirmedPassword"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView4"
           android:layout_below="@+id/textView4"
           android:ems="10"
           android:inputType="textPassword" >
        
        </EditText>  
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputConfirmedPassword"
            android:layout_marginLeft="14dp"
            android:text="@string/firstname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/inputFirstName"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView5"
           android:layout_below="@+id/textView5"
           android:ems="10"
           android:inputType="textPersonName" >
            
       </EditText>
       
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputFirstName"
            android:layout_marginLeft="14dp"
            android:text="@string/lastname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/inputLastName"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView6"
           android:layout_below="@+id/textView6"
           android:ems="10"
           android:inputType="textPersonName" >
            
       </EditText>
       
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputLastName"
            android:layout_marginLeft="14dp"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/country"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView7"
           android:layout_below="@+id/textView7"
           android:ems="10"
           android:inputType="text" >
            
       </EditText>
       
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/country"
            android:layout_marginLeft="14dp"
            android:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/city"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView8"
           android:layout_below="@+id/textView8"
           android:ems="10"
           android:inputType="text" >
            
       </EditText>
       
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/city"
            android:layout_marginLeft="14dp"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/gender"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView9"
           android:layout_below="@+id/textView9"
           android:ems="10"
           android:inputType="text" >
            
       </EditText>
       
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/gender"
            android:layout_marginLeft="14dp"
            android:text="@string/birthdate"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="serif" />

       <EditText
           android:id="@+id/birthdate"
           android:layout_width="280dp"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView10"
           android:layout_below="@+id/textView10"
           android:ems="10"
           android:inputType="date" >
            
       </EditText>
       
       <Button
            android:id="@+id/button1"
       	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentBottom="true"
        	android:layout_centerHorizontal="true"
        	android:layout_below="@+id/birthdate"
        	android:layout_marginBottom="41dp"
        	android:onClick="goToHome"
        	android:text="@string/submit"
        	android:textColor="@color/textColor"
        	android:textSize="15sp"
        	android:textStyle="normal"
        	android:typeface="serif" />
        
        </RelativeLayout>
    
    </ScrollView>

</LinearLayout>